--- a/Projects.html
+++ b/Projects.html
@@ -121,9 +121,9 @@
 
 <body>
     <nav>
-        <a class="navigation" href="Index.html">Home</a>
-        <a class="navigation" href="Skill.html">Skills</a>
-        <a class="navigation" href="contact.html">Contacts</a>
+        <a class="navigation" href="./index.html">Home</a>
+        <a class="navigation" href="./Skill.html">Skills</a>
+        <a class="navigation" href="./contact.html">Contacts</a>
     </nav>
     <H1>
         My Projects :-
