--- a/Skill.html
+++ b/Skill.html
@@ -46,9 +46,9 @@
 
 <body>
     <nav>
-        <a class="navigation" href="Index.html">Home</a>
-        <a class="navigation" href="Projects.html">Projects</a>
-        <a class="navigation" href="contact.html">Contacts</a>
+        <a class="navigation" href="./index.html">Home</a>
+        <a class="navigation" href="./Projects.html">Projects</a>
+        <a class="navigation" href="./contact.html">Contacts</a>
     </nav>
     <h1>Skills</h1>
     <ol>
