--- a/contact.html
+++ b/contact.html
@@ -72,9 +72,9 @@
 
 <body>
     <nav>
-        <a class="navigation" href="Index.html">Home</a>
-        <a class="navigation" href="Projects.html">Projects</a>
-        <a class="navigation" href="Skill.html">Skills</a>
+        <a class="navigation" href="./index.html">Home</a>
+        <a class="navigation" href="./Projects.html">Projects</a>
+        <a class="navigation" href="./Skill.html">Skills</a>
     </nav>
     <h1>
         Contacts
