--- a/Projects.html
+++ b/Projects.html
@@ -121,7 +121,7 @@
 
 <body>
     <nav>
-        <a class="navigation" href="./index.html">Home</a>
+        <a class="navigation" href="/index.html">Home</a>
         <a class="navigation" href="./Skill.html">Skills</a>
         <a class="navigation" href="./contact.html">Contacts</a>
     </nav>
