--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 
 <body>
     <nav>
-        <a class="navigation" href="./index.html">Home</a>
+        <a class="navigation" href="/index.html">Home</a>
         <a class="navigation" href="./Projects.html">Projects</a>
         <a class="navigation" href="./Skill.html">Skills</a>
     </nav>
