--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 <body>
     
     <nav>
-        <a class="navigation" href="./Projects.html">Projects</a>
-        <a class="navigation" href="./Skill.html">Skills</a>
-        <a class="navigation" href="./contact.html">Contacts</a>
+        <a class="navigation" href="/Projects Page/Projects.html">Projects</a>
+        <a class="navigation" href="/Skills Page/Skill.html">Skills</a>
+        <a class="navigation" href="/Contact Page/contact.html">Contacts</a>
     </nav>
     <img src="./picture/350115712_593942726166288_8919996105477500241_n.jpg" alt="My Pic" width="200px" height="200px"
         style="border-radius: 50%; border: 5px solid rgb(182, 176, 176);">
