--- a/Contact Page/contact.html
+++ b/Contact Page/contact.html
@@ -73,8 +73,8 @@
 <body>
     <nav>
         <a class="navigation" href="/index.html">Home</a>
-        <a class="navigation" href="./Projects.html">Projects</a>
-        <a class="navigation" href="./Skill.html">Skills</a>
+        <a class="navigation" href="../Projects Page/Projects.html">Projects</a>
+        <a class="navigation" href="../Skills Page/Skill.html">Skills</a>
     </nav>
     <h1>
         Contacts
