--- a/Skills Page/Skill.html
+++ b/Skills Page/Skill.html
@@ -47,8 +47,8 @@
 <body>
     <nav>
         <a class="navigation" href="/index.html">Home</a>
-        <a class="navigation" href="./Projects.html">Projects</a>
-        <a class="navigation" href="./contact.html">Contacts</a>
+        <a class="navigation" href="../Projects Page/Projects.html">Projects</a>
+        <a class="navigation" href="../Contact Page/contact.html">Contacts</a>
     </nav>
     <h1>Skills</h1>
     <ol>
