--- a/Projects Page/Projects.html
+++ b/Projects Page/Projects.html
@@ -139,7 +139,7 @@
     </div>
     <div class="imgs">
         <img src="/Own Projects/website 1/main.png" alt="" width="210px" height="120px" style="border: 1px solid black;">
-        <a style="margin-right: 250px; class =" hayee" href="/Own Projects/website 1/made a Website.html">Simple Website</a>
+        <a style="margin-right: 250px;" class =" hayee" href="/Own Projects/website 1/made a Website.html">Simple Website</a>
     </div>
     <div class="imgss">
         <img src="/Own Projects/XD/main.png" alt="" width="210px" height="120px" style="border: 1px solid black;">
