--- a/picture/Projects.html
+++ b/picture/Projects.html
@@ -121,29 +121,29 @@
 
 <body>
     <nav>
-        <a class="navigation" href="/index.html">Home</a>
+        <a class="navigation" href="../index.html">Home</a>
         <a class="navigation" href="../Skills Page/Skill.html">Skills</a>
         <a class="navigation" href="../Contact Page/contact.html">Contacts</a>
     </nav>
     <H1>
         My Projects :-
     </H1>
-    <img class="cloths" src="/Own Projects/Cloths/cloths.png" alt="" width="150px" style=" border: 1px solid black;">
+    <img class="cloths" src="../Own Projects/Cloths/cloths.png" alt="" width="150px" style=" border: 1px solid black;">
     <div class="img1">
-        <a class="hayee" href="/Own Projects/Cloths/Index.html" style="margin-right: 250px;">About Cloths</a>
+        <a class="hayee" href="../Own Projects/Cloths/Index.html" style="margin-right: 250px;">About Cloths</a>
     </div>
     <div class="img2">
-        <img class="imran" src="/Own Projects/Hayee/main.png" alt="" width="180px" height="100px"
+        <img class="imran" src="../Own Projects/Hayee/main.png" alt="" width="180px" height="100px"
             style=" border: 1px solid black; position: absolute;">
-        <a class="hayee" href="/Own Projects/Hayee/index.html">Trendy Wear</a>
+        <a class="hayee" href="../Own Projects/Hayee/index.html">Trendy Wear</a>
     </div>
     <div class="imgs">
-        <img src="/Own Projects/website 1/main.png" alt="" width="210px" height="120px" style="border: 1px solid black;">
-        <a style="margin-right: 250px;" class =" hayee" href="/Own Projects/website 1/made a Website.html">Simple Website</a>
+        <img src="../Own Projects/website 1/main.png" alt="" width="210px" height="120px" style="border: 1px solid black;">
+        <a style="margin-right: 250px;" class =" hayee" href="../Own Projects/website 1/made a Website.html">Simple Website</a>
     </div>
     <div class="imgss">
-        <img src="/Own Projects/XD/main.png" alt="" width="210px" height="120px" style="border: 1px solid black;">
-        <a class="hayee" href="/Own Projects/XD/index.html">Find me Career</a>
+        <img src="../Own Projects/XD/main.png" alt="" width="210px" height="120px" style="border: 1px solid black;">
+        <a class="hayee" href="../Own Projects/XD/index.html">Find me Career</a>
     </div>
 </body>
 
