--- a/Skills Page/Skill.html
+++ b/Skills Page/Skill.html
@@ -46,7 +46,7 @@
 
 <body>
     <nav>
-        <a class="navigation" href="/index.html">Home</a>
+        <a class="navigation" href="../index.html">Home</a>
         <a class="navigation" href="../Projects Page/Projects.html">Projects</a>
         <a class="navigation" href="../Contact Page/contact.html">Contacts</a>
     </nav>
