--- a/Contact Page/contact.html
+++ b/Contact Page/contact.html
@@ -72,7 +72,7 @@
 
 <body>
     <nav>
-        <a class="navigation" href="/index.html">Home</a>
+        <a class="navigation" href="../index.html">Home</a>
         <a class="navigation" href="../Projects Page/Projects.html">Projects</a>
         <a class="navigation" href="../Skills Page/Skill.html">Skills</a>
     </nav>
