Add Form file And changed paths

--- a/Contact Page/contact.html
+++ b/Contact Page/contact.html
@@ -75,6 +75,7 @@
         <a class="navigation" href="../index.html">Home</a>
         <a class="navigation" href="../Projects Page/Projects.html">Projects</a>
         <a class="navigation" href="../Skills Page/Skill.html">Skills</a>
+        <a class="navigation" href="../Registration Form/index.html">Forms</a>
     </nav>
     <h1>
         Contacts
