--- a/Projects Page/Projects.html
+++ b/Projects Page/Projects.html
@@ -124,6 +124,7 @@
         <a class="navigation" href="../index.html">Home</a>
         <a class="navigation" href="../Skills Page/Skill.html">Skills</a>
         <a class="navigation" href="../Contact Page/contact.html">Contacts</a>
+        <a class="navigation" href="../Registration Form/index.html">Forms</a>
     </nav>
     <H1>
         My Projects :-
