--- a/Skills Page/Skill.html
+++ b/Skills Page/Skill.html
@@ -49,6 +49,7 @@
         <a class="navigation" href="../index.html">Home</a>
         <a class="navigation" href="../Projects Page/Projects.html">Projects</a>
         <a class="navigation" href="../Contact Page/contact.html">Contacts</a>
+        <a class="navigation" href="../Registration Form/index.html">Forms</a>
     </nav>
     <h1>Skills</h1>
     <ol>
