Add New Html 5 Tags and audio,video And Google Map

--- a/Projects Page/Projects.html
+++ b/Projects Page/Projects.html
@@ -116,6 +116,11 @@
             font-size: 21px;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         }
+        #project-video{
+            position: relative;
+            top: 650px;
+            text-align: center;
+        }
     </style>
 </head>
 
@@ -124,7 +129,6 @@
         <a class="navigation" href="../index.html">Home</a>
         <a class="navigation" href="../Skills Page/Skill.html">Skills</a>
         <a class="navigation" href="../Contact Page/contact.html">Contacts</a>
-        <a class="navigation" href="../Registration Form/index.html">Forms</a>
     </nav>
     <H1>
         My Projects :-
@@ -145,6 +149,9 @@
     <div class="imgss">
         <img src="../Own Projects/XD/main.png" alt="" width="210px" height="120px" style="border: 1px solid black;">
         <a class="hayee" href="../Own Projects/XD/index.html">Find me Career</a>
+    </div>
+    <div id="project-video">
+        <video src="../Videos/002.mkv" width="600px" controls></video>
     </div>
 </body>
 
