--- a/Contact Page/contact.html
+++ b/Contact Page/contact.html
@@ -67,6 +67,16 @@
             left: 300px;
             top: 320px;
         }
+        td,th{
+            width: 180px;
+            height: 40px;
+            text-align: center;
+        }
+        iframe{
+            position: relative;
+            top: 500px;
+            left: 315px;
+        }
     </style>
 </head>
 
@@ -75,7 +85,6 @@
         <a class="navigation" href="../index.html">Home</a>
         <a class="navigation" href="../Projects Page/Projects.html">Projects</a>
         <a class="navigation" href="../Skills Page/Skill.html">Skills</a>
-        <a class="navigation" href="../Registration Form/index.html">Forms</a>
     </nav>
     <h1>
         Contacts
@@ -142,6 +151,7 @@
         </tr>
 
     </table>
+    <iframe src="https://shorturl.at/mpsHM" width="700" height="450" style="border:10;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 
 </html>
