--- a/Skills Page/Skill.html
+++ b/Skills Page/Skill.html
@@ -14,19 +14,22 @@
             position: absolute;
             left: 80px;
             top: 70px;
-            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         }
-        ol{
+
+        ol {
             position: absolute;
             left: 80px;
             top: 140px;
         }
-        li{
+
+        li {
             font-size: 19px;
             margin: 20px;
-            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
-        nav{
+
+        nav {
             position: absolute;
             left: 510px;
             top: 30px;
@@ -34,30 +37,271 @@
             font-weight: bold;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
-        a{
+
+        a {
             margin: 20px;
             text-decoration: none;
         }
-        a:hover{
+
+        a:hover {
             color: red;
+        }
+
+        /* Css for Form is here */
+
+        nav {
+            position: absolute;
+            color: #ffff;
+            left: 390px;
+            top: 30px;
+            font-size: 21px;
+            font-weight: bold;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        }
+
+        nav a:hover {
+            color: red;
+        }
+
+        .navigation {
+            padding-left: 40px;
+            text-decoration: none;
+        }
+
+        .top {
+            width: 454px;
+            height: 35px;
+            background-color: rgb(0, 0, 0);
+            color: #ffff;
+            position: relative;
+            top: 370px;
+            left: 400px;
+            padding-left: 100px;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-weight: normal;
+
+        }
+
+        .wrapper {
+            width: 500px;
+            height: 565px;
+            /* background-color: #ffff; */
+            border: 2px solid black;
+            position: relative;
+            top: 370px;
+            left: 400px;
+            bottom: 20px;
+            padding-left: 50px;
+            padding-top: 5px;
+            border-bottom-left-radius: 5px;
+            border-bottom-right-radius: 5px;
+        }
+
+        .name {
+            margin: 10px 0px 0px 40px;
+            width: 130px;
+            height: 30px;
+            border: none;
+            background-color: #e1d6d6;
+            padding-left: 6px;
+            border-radius: 3px;
+        }
+
+        .company {
+            width: 300px;
+            height: 30px;
+            margin-left: 14px;
+            border: none;
+            background-color: #e1d6d6;
+            padding-left: 6px;
+            border-radius: 3px;
+        }
+
+        .email {
+            width: 300px;
+            height: 30px;
+            margin-left: 40px;
+            border: none;
+            background-color: #e1d6d6;
+            padding-left: 6px;
+            border-radius: 3px;
+        }
+
+        .code {
+            display: inline;
+            width: 90px;
+            height: 30px;
+            margin-left: 40px;
+            background-color: #e1d6d6;
+            border: none;
+        }
+
+        .phone {
+            width: 198px;
+            height: 30px;
+            background-color: #e1d6d6;
+            border: none;
+            border-radius: 3px;
+            padding-left: 6px;
+        }
+
+        .subject {
+            width: 300px;
+            height: 30px;
+            margin-left: 30px;
+            border: none;
+            background-color: #e1d6d6;
+            padding-left: 6px;
+            border-radius: 3px;
+        }
+
+        .btn {
+            width: 80px;
+            height: 30px;
+            border: none;
+            border-radius: 3px;
+            color: #ffff;
+            background-color: #c93d44;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            cursor: pointer;
+        }
+
+        .firstClass {
+            display: flex;
+            align-items: center;
+            margin: 25px 0px;
+        }
+
+        .firstClassLabel {
+            font-size: 12px;
+            color: #000000;
+            margin-left: -33px;
+        }
+
+        .firstClassChild {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
         }
     </style>
 </head>
 
 <body>
-    <nav>
-        <a class="navigation" href="../index.html">Home</a>
-        <a class="navigation" href="../Projects Page/Projects.html">Projects</a>
-        <a class="navigation" href="../Contact Page/contact.html">Contacts</a>
-        <a class="navigation" href="../Registration Form/index.html">Forms</a>
-    </nav>
-    <h1>Skills</h1>
-    <ol>
-        <li>Hafiz-E-Quran</li>
-        <li>Web-Developer</li>
-        <li>Computer-User</li>
-        <li>Affiliate-Marketing</li>
-    </ol>
+    <header>
+
+        <nav>
+            <a class="navigation" href="../index.html">Home</a>
+            <a class="navigation" href="../Projects Page/Projects.html">Projects</a>
+            <a class="navigation" href="../Contact Page/contact.html">Contacts</a>
+        </nav>
+    </header>
+    <section>
+
+        <h1>Skills</h1>
+        <ol>
+            <li>Hafiz-E-Quran</li>
+            <li>Web-Developer</li>
+            <li>Computer-User</li>
+            <li>Affiliate-Marketing</li>
+        </ol>
+
+        <!-- Form is Here -->
+        <div class="top">
+            <div>
+                <h2>
+                    EVENT REGISTERATION FORM
+                </h2>
+            </div>
+        </div>
+        <div class="wrapper">
+            <form>
+                <div class="firstClass">
+                    <div>
+                        <p>Name :</p>
+                    </div>
+                    <div class="firstClassChild">
+                        <input type="text" class="name" required>
+                        <label class="firstClassLabel">First Name</label>
+                    </div>
+                    <div class="firstClassChild">
+                        <input type="text" class="name">
+                        <label class="firstClassLabel"> last Name</label>
+                    </div>
+                </div>
+                <div class="firstClass">
+                    <div>
+                        <p>Company :</p>
+                    </div>
+                    <div>
+                        <input type="text" class="company" required>
+                    </div>
+                </div>
+                <div class="firstClass">
+                    <div>
+                        <p>Email :</p>
+                    </div>
+                    <div>
+                        <input type="email" placeholder="example@.com" class="email" required>
+                    </div>
+                </div>
+                <div class="firstClass">
+                    <div>
+                        <p>Phone :</p>
+                    </div>
+                    <div>
+                        <select class="code" style="margin-right: 10px;">
+                            <option selected>area code</option>
+                            <option>+90</option>
+                            <option>+91</option>
+                            <option>+92</option>
+                            <option>+93</option>
+                            <option>+94</option>
+                            <option>+95</option>
+                            <option>+96</option>
+                            <option>+97</option>
+                        </select>
+                    </div>
+                    <div>
+                        <input type="number" placeholder="Phone number" class="phone" required>
+                    </div>
+                </div>
+                <div class="firstClass">
+                    <div>
+                        <p>
+                            Subject :
+                        </p>
+                    </div>
+                    <div>
+                        <select class="subject">
+                            <option>Choose option</option>
+                            <option>Pakistani</option>
+                            <option>Indians</option>
+                            <option>Americans</option>
+                            <option>Saudians</option>
+                        </select>
+                    </div>
+                </div>
+                <br>
+                <div>
+                    <div>
+                        Are you an exesting customer ?
+                    </div>
+                    <br>
+                    <div>
+                        <input type="radio">Yes
+                        <input type="radio">No
+                    </div>
+                </div>
+                <br>
+                <div>
+                    <input type="submit" value="REGISTER" class="btn">
+                </div>
+            </form>
+        </div>
+    </section>
 </body>
 
 </html>
